Update classifiers in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Topic :: System :: Networking",
+    "Topic :: Internet",
+    "Topic :: Utilities",
 ]
 
 [project.urls]
