Add Console env to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
     "Topic :: System :: Networking",
     "Topic :: Internet",
     "Topic :: Utilities",
+    "Environment :: Console",
 ]
 
 [project.urls]
